src/objects/APTS_RTR_Scheduler_Query__c.object
<CustomObject>
    <description>This object will be used to capture the user inputs from RTR Scheduler Page and it will be used to update the relevant records in Transaction Data object.</description>
    <fields>
        <fullName>APTS_Agreement_Number__c</fullName>
        <description>This field will hold the values of Asset Line Item associated Agreement Numbers.</description>
        <label>Agreement Number</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Business_Transaction_Type__c</fullName>
        <description>This field will hold text datatype value of Business Transaction Type</description>
        <label>Business Transaction Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Company_Code__c</fullName>
        <description>This field will hold text datatype value of company code.</description>
        <label>Company Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Effective_End_Date__c</fullName>
        <description>This field will hold end date of contract effective date.</description>
        <label>Contract Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Contract_Effective_Start_Date__c</fullName>
        <description>This field will hold start date of contract effective date.</description>
        <label>Contract Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Controlled_Interface_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will help in decision making whether to proceed to update the Transaction records.</description>
        <label>Controlled Interface Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Current_Job_Carry_Out_CED__c</fullName>
        <description>This field is used for chronological order execution of user request. Initially will hold the CED Start Date and keep on increment the date till it matches with CED End Date.</description>
        <label>Current Job Carry Out CED</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Current_Job_Work_In_Progress__c</fullName>
        <description>This field will represent the current job execution status of user request.</description>
        <label>Current Job Work In Progress</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Validation</fullName>
                    <default>true</default>
                    <label>Data Validation</label>
                </value>
                <value>
                    <fullName>Strongest BTT</fullName>
                </value>
                <value>
                    <fullName>Calculate Net and Gross</fullName>
                </value>
                <value>
                    <fullName>Process Staging</fullName>
                </value>
                <value>
                    <fullName>Finished</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Finance_ID__c</fullName>
        <description>This field will hold the values of Account associated Finance ID.</description>
        <label>Finance ID</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_LAE_RAR_Transaction_ID__c</fullName>
        <description>This field will hold the values of LAE-RAR Transaction record Ids.</description>
        <label>LAE-RAR Transaction ID</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Type_of_Contract__c</fullName>
        <description>This field will hold text value.</description>
        <label>Type of Contract</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Line_Item_Number__c</fullName>
        <description>This field will hold the values of Asset Line Item Number</description>
        <label>Asset Line Item Number</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>isBatchableRequest__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will field will determine that the request is in queue for execution.</description>
        <label>isBatchableRequest</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isDataValidated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will hold boolean value that the Assets data is validated or not. DQ-2484</description>
        <label>isDataValidated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isProcessed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This will field will determine that the request is executed.</description>
        <label>isProcessed</label>
        <type>Checkbox</type>
    </fields>
    <label>RTR Scheduler Query</label>
    <nameField>
        <displayFormat>SQ-{0000}</displayFormat>
        <label>RTR Scheduler Query Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RTR Scheduler Querys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>